# chatgpt-work-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  config.example.toml
assets/: ICON-PROVENANCE.md
compat/: README.md
docs/: architecture.md  audit-and-improvement-plan.md  codex-desktop-linux-review.md  flatpak-sandbox.md  performance-architecture.md  unified-electron-assessment.md  update-security.md  upstream-feature-audit.md  upstream-snapshot.json  validation-report.md  work-upstream-assessment.md
packaging/arch/: PKGBUILD
scripts/: build-flatpak.sh  build-pacman.sh  build-work-app.sh  check-upstream.sh  configure-work-runtime.py  fetch-upstream.sh  inspect-upstream.py  install-user.sh  migrate-codex-history.py  migrate-electron-profile.sh  normalize-sbom.sh  patch-compat-adapter.py  patch-computer-use-wayland.py  patch-work-asar.py  prepare-compat-adapter.sh  prepare-computer-use-linux.sh  profile-runtime.sh  prune-stale-build-work.sh  prune-upstream-cache.sh  refresh-private-computer-use.sh  refresh-upstream-snapshot.sh  rollback-user.sh  smoke-wayland.sh  uninstall-user.sh  update-flatpak-sources.sh  update-user.sh  validate-upstream-candidate.sh  validate-work-patch-report.py  verify-reviewed-build.py
src/: capture.rs  cli.rs  config.rs  doctor.rs  engine.rs  gui.rs  lib.rs  main.rs  paths.rs  policy.rs  shortcut.rs  state.rs
tests/: codex_history_migration.sh  computer_use_source.sh  electron_profile_migration.sh  runtime_hardening.sh  update_transaction.sh  upstream_tooling.sh
(+7 files in other folders)
