[package]
name = "chatgpt-work-linux"
version = "0.1.0"
edition = "2024"
description = "A lightweight, independently branded Linux desktop web workspace"
license = "MIT"

[lib]
name = "chatgpt_work_linux"
path = "src/lib.rs"

[[bin]]
name = "chatgpt-work-linux"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
# ashpd 0.13.12's screenshot module uses its optional serde_repr dependency
# without activating it; game_mode activates that same dependency until fixed upstream.
ashpd = { version = "0.13.12", features = ["game_mode", "global_shortcuts", "screenshot"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
gio = "0.18"
glib = "0.18"
gtk = { version = "0.18", features = ["v3_24"] }
gdk = "0.18"
gdk-pixbuf = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tempfile = "3.23"
tokio = { version = "1.48", features = ["net", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
webkit2gtk = { version = "2.0.2", features = ["v2_40"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
